--- a/.gitattributes
+++ b/.gitattributes
@@ -1,67 +1,61 @@
-dependencies/** linguist-vendored
-src/app/glad.c linguist-vendored
-*.dll linguist-binary
-
 ###############################################################################
-# Set default behavior to automatically normalize line endings.
+# Line endings normalization
 ###############################################################################
 * text=auto
 
 ###############################################################################
-# Set default behavior for command prompt diff.
-#
-# This is need for earlier builds of msysgit that does not have it on by
-# default for csharp files.
-# Note: This is only used by command line
+# Binary files
 ###############################################################################
-#*.cs     diff=csharp
+*.exe binary
+*.dll binary
+*.lib binary
+*.obj binary
+*.iobj binary
+*.ipdb binary
+*.pdb binary
+*.ilk binary
+*.res binary
+*.exp binary
+*.a binary
+*.so binary
+*.dylib binary
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.ico binary
+*.ttf binary
+*.otf binary
 
 ###############################################################################
-# Set the merge driver for project and solution files
-#
-# Merging from the command prompt will add diff markers to the files if there
-# are conflicts (Merging from VS is not affected by the settings below, in VS
-# the diff markers are never inserted). Diff markers may cause the following 
-# file extensions to fail to load in VS. An alternative would be to treat
-# these files as binary and thus will always conflict and require user
-# intervention with every merge. To do so, just uncomment the entries below
+# C++ source and header files (with proper line endings)
 ###############################################################################
-#*.sln       merge=binary
-#*.csproj    merge=binary
-#*.vbproj    merge=binary
-#*.vcxproj   merge=binary
-#*.vcproj    merge=binary
-#*.dbproj    merge=binary
-#*.fsproj    merge=binary
-#*.lsproj    merge=binary
-#*.wixproj   merge=binary
-#*.modelproj merge=binary
-#*.sqlproj   merge=binary
-#*.wwaproj   merge=binary
+*.cpp text eol=crlf
+*.h text eol=crlf
+*.hpp text eol=crlf
+*.cc text eol=crlf
+*.cxx text eol=crlf
+*.c text eol=crlf
 
 ###############################################################################
-# behavior for image files
-#
-# image files are treated as binary by default.
+# Project and configuration files
 ###############################################################################
-#*.jpg   binary
-#*.png   binary
-#*.gif   binary
+*.vcxproj linguist-generated text eol=crlf
+*.vcxproj.filters linguist-generated text eol=crlf
+*.vcxproj.user text eol=crlf
+*.sln linguist-generated text eol=crlf
+*.user text eol=crlf
+*.filters text eol=crlf
+*.opensdf linguist-generated binary
+*.sdf linguist-generated binary
+*.ipch linguist-generated binary
+*.db binary
+*.opendb binary
+*.pch binary
 
 ###############################################################################
-# diff behavior for common document formats
-# 
-# Convert binary document formats to text before diffing them. This feature
-# is only available from the command line. Turn it on by uncommenting the 
-# entries below.
+# Third-party and generated code
 ###############################################################################
-#*.doc   diff=astextplain
-#*.DOC   diff=astextplain
-#*.docx  diff=astextplain
-#*.DOCX  diff=astextplain
-#*.dot   diff=astextplain
-#*.DOT   diff=astextplain
-#*.pdf   diff=astextplain
-#*.PDF   diff=astextplain
-#*.rtf   diff=astextplain
-#*.RTF   diff=astextplain
+dependencies/** linguist-vendored
+src/app/glad.c linguist-vendored text eol=crlf
+packages/** linguist-vendored
