--- a/CG25-app3D.vcxproj
+++ b/CG25-app3D.vcxproj
@@ -138,7 +138,10 @@
     <ClCompile Include="dependencies\ImGui\imgui_tables.cpp" />
     <ClCompile Include="dependencies\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\app\callbacks.cpp" />
     <ClCompile Include="src\app\glad.c" />
+    <ClCompile Include="src\app\gui.cpp" />
+    <ClCompile Include="src\app\initializations.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -153,6 +156,10 @@
     <ClInclude Include="dependencies\ImGui\imstb_rectpack.h" />
     <ClInclude Include="dependencies\ImGui\imstb_textedit.h" />
     <ClInclude Include="dependencies\ImGui\imstb_truetype.h" />
+    <ClInclude Include="src\app\callbacks.h" />
+    <ClInclude Include="src\app\gui.h" />
+    <ClInclude Include="src\app\initializations.h" />
+    <ClInclude Include="src\app\settings.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
