--- a/CG25-app3D.vcxproj
+++ b/CG25-app3D.vcxproj
@@ -142,6 +142,9 @@
     <ClCompile Include="src\app\glad.c" />
     <ClCompile Include="src\app\gui.cpp" />
     <ClCompile Include="src\app\initializations.cpp" />
+    <ClCompile Include="src\graphics\renderable\AbstractMesh.cpp" />
+    <ClCompile Include="src\graphics\renderable\InsideGpuMesh.cpp" />
+    <ClCompile Include="src\graphics\renderable\MeshGeometry.cpp" />
     <ClCompile Include="src\graphics\shader\Shader.cpp" />
     <ClCompile Include="src\graphics\shader\ShaderMaker.cpp" />
   </ItemGroup>
@@ -170,8 +173,12 @@
     <ClInclude Include="src\app\callbacks.h" />
     <ClInclude Include="src\app\gui.h" />
     <ClInclude Include="src\app\initializations.h" />
+    <ClInclude Include="src\graphics\renderable\AbstractMesh.h" />
+    <ClInclude Include="src\graphics\renderable\InsideGpuMesh.h" />
+    <ClInclude Include="src\graphics\renderable\MeshGeometry.h" />
     <ClInclude Include="src\graphics\shader\Shader.h" />
     <ClInclude Include="src\graphics\shader\ShaderMaker.h" />
+    <ClInclude Include="src\libs.h" />
     <ClInclude Include="src\settings.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
