--- a/CG25-app3D.vcxproj
+++ b/CG25-app3D.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="src\app\gui.cpp" />
     <ClCompile Include="src\app\initializations.cpp" />
     <ClCompile Include="src\graphics\Camera.cpp" />
+    <ClCompile Include="src\graphics\Projection.cpp" />
     <ClCompile Include="src\graphics\renderable\AbstractMesh.cpp" />
     <ClCompile Include="src\graphics\renderable\InsideGpuMesh.cpp" />
     <ClCompile Include="src\graphics\renderable\MeshGeometry.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="src\app\gui.h" />
     <ClInclude Include="src\app\initializations.h" />
     <ClInclude Include="src\graphics\Camera.h" />
+    <ClInclude Include="src\graphics\Projection.h" />
     <ClInclude Include="src\graphics\renderable\AbstractMesh.h" />
     <ClInclude Include="src\graphics\renderable\InsideGpuMesh.h" />
     <ClInclude Include="src\graphics\renderable\MeshGeometry.h" />
