feat: Added MeshGeometryFactory with basic polygons

--- a/CG25-app3D.vcxproj
+++ b/CG25-app3D.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="src\graphics\Projection.cpp" />
     <ClCompile Include="src\graphics\renderable\AbstractMesh.cpp" />
     <ClCompile Include="src\graphics\renderable\GpuBuffers.cpp" />
+    <ClCompile Include="src\graphics\renderable\MeshGeometryFactory.cpp" />
     <ClCompile Include="src\graphics\renderable\RenderableObject.cpp" />
     <ClCompile Include="src\graphics\renderable\MeshGeometry.cpp" />
     <ClCompile Include="src\graphics\renderable\RenderableBackground.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="src\graphics\Projection.h" />
     <ClInclude Include="src\graphics\renderable\AbstractMesh.h" />
     <ClInclude Include="src\graphics\renderable\GpuBuffers.h" />
+    <ClInclude Include="src\graphics\renderable\MeshGeometryFactory.h" />
     <ClInclude Include="src\graphics\renderable\RenderableObject.h" />
     <ClInclude Include="src\graphics\renderable\MeshGeometry.h" />
     <ClInclude Include="src\graphics\renderable\RenderableBackground.h" />
