--- a/CG25-app3D.vcxproj
+++ b/CG25-app3D.vcxproj
@@ -142,7 +142,6 @@
     <ClCompile Include="src\app\glad.c" />
     <ClCompile Include="src\app\gui.cpp" />
     <ClCompile Include="src\app\initializations.cpp" />
-    <ClCompile Include="src\app\MessageBus.cpp" />
     <ClCompile Include="src\graphics\Camera.cpp" />
     <ClCompile Include="src\graphics\Projection.cpp" />
     <ClCompile Include="src\graphics\renderable\Mesh.cpp" />
@@ -159,6 +158,7 @@
     <ClCompile Include="src\graphics\shader\ShaderMaker.cpp" />
     <ClCompile Include="src\graphics\texture\Texture.cpp" />
     <ClCompile Include="src\graphics\texture\TextureMaker.cpp" />
+    <ClCompile Include="src\graphics\WindowManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -185,7 +185,6 @@
     <ClInclude Include="src\app\callbacks.h" />
     <ClInclude Include="src\app\gui.h" />
     <ClInclude Include="src\app\initializations.h" />
-    <ClInclude Include="src\app\MessageBus.h" />
     <ClInclude Include="src\graphics\Camera.h" />
     <ClInclude Include="src\graphics\Projection.h" />
     <ClInclude Include="src\graphics\renderable\Mesh.h" />
@@ -202,6 +201,7 @@
     <ClInclude Include="src\graphics\shader\ShaderMaker.h" />
     <ClInclude Include="src\graphics\texture\Texture.h" />
     <ClInclude Include="src\graphics\texture\TextureMaker.h" />
+    <ClInclude Include="src\graphics\WindowManager.h" />
     <ClInclude Include="src\libs.h" />
     <ClInclude Include="src\settings.h" />
   </ItemGroup>
