--- a/imgui.ini
+++ b/imgui.ini
@@ -7,6 +7,14 @@ Pos=666,427
 Size=142,134
 
 [Window][Commands]
+Pos=14,318
+Size=619,434
+
+[Window][Settings]
 Pos=10,10
-Size=703,434
+Size=492,116
+
+[Window][PAUSE - Settings]
+Pos=10,10
+Size=688,284
 
