--- a/CG25-app3D.vcxproj.filters
+++ b/CG25-app3D.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="src\app\AppSettings.cpp">
       <Filter>Source Files\App</Filter>
     </ClCompile>
+    <ClCompile Include="src\app\App.cpp">
+      <Filter>Source Files\App</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dependencies\ImGui\imgui_impl_glfw.h">
@@ -270,6 +273,12 @@
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
     <ClInclude Include="src\app\AppSettings.h">
+      <Filter>Header Files\App</Filter>
+    </ClInclude>
+    <ClInclude Include="src\app\App.h">
+      <Filter>Header Files\App</Filter>
+    </ClInclude>
+    <ClInclude Include="src\app\AppState.h">
       <Filter>Header Files\App</Filter>
     </ClInclude>
   </ItemGroup>
